--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     <title>Calculadora de Figuras Geométricas</title>
 </head>
 <body>
-    <h1>Figuras Geométricas</h1>
-
+    <header>
+        <h1>Figuras Geométricas</h1>
+    </header>
+    <section>
+        <h2>Calcula el área y el perímetro de un cuadrado</h2>
+        <form action="">
+           <label for="InputCuadrado">
+               Escribe cuanto mide el cuadrado:
+           </label> 
+           <input type="number" id="InputCuadrado">
+           <button type="button" onclick="calcularPerimetroCuadrado()">Calcular el perímetro</button>
+           <button type="button" onclick="calcularAreaCuadrado()">Calcular el área</button>
+        </form>
+    </section>
 
     <script src="./figuras.js"></script>
 </body>
