--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
            <button type="button" onclick="calcularAreaCuadrado()">Calcular el área</button>
         </form>
     </section>
+    <section>
+        <h2>Calcula el área y el perímetro del triángulo</h2>
+        <form action="">
+            <label for="">
+                Escribe cuanto mide el triágulo:
+            </label>
+            <input type="number">
+            <button></button>
+            <button></button>
+        </form>
+    </section>
 
     <script src="./figuras.js"></script>
 </body>
