--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
             <button></button>
         </form>
     </section>
+    <section>
+        <h2>Calcula el área y el perímetro del círculo</h2>
+        <form action="">
+            <label for="">
+                Escribe cuanto mide el círculo:
+            </label>
+            <input type="number">
+            <button></button>
+            <button></button>
+        </form>
+    </section>
 
     <script src="./figuras.js"></script>
 </body>
