--- a/index.html
+++ b/index.html
@@ -4,46 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Calculadora de Figuras Geométricas</title>
 </head>
 <body>
+    <!-- Header -->
     <header>
-        <h1>Figuras Geométricas</h1>
+        <h1>Calculadora de Figuras Geométricas</h1>
     </header>
-    <section>
-        <h2>Calcula el área y el perímetro de un cuadrado</h2>
-        <form action="">
-           <label for="InputCuadrado">
-               Escribe cuanto mide el cuadrado:
-           </label> 
-           <input type="number" id="InputCuadrado">
-           <button type="button" onclick="calcularPerimetroCuadrado()">Calcular el perímetro</button>
-           <button type="button" onclick="calcularAreaCuadrado()">Calcular el área</button>
-        </form>
-    </section>
-    <section>
-        <h2>Calcula el área y el perímetro del triángulo</h2>
-        <form action="">
-            <label for="">
-                Escribe cuanto mide el triágulo:
-            </label>
-            <input type="number">
-            <button></button>
-            <button></button>
-        </form>
-    </section>
-    <section>
-        <h2>Calcula el área y el perímetro del círculo</h2>
-        <form action="">
-            <label for="">
-                Escribe cuanto mide el círculo:
-            </label>
-            <input type="number">
-            <button></button>
-            <button></button>
-        </form>
+
+    <!-- Main -->
+    <main class="main">
+
+    <!-- Cuadrado -->
+    <section class="contenedor cuadrado">
+      <h2>Cuadrado</h2>
+      <img src="./img/cuadrado.png" alt="cuadrado">
+      <label for="">Digite la medida del lado:
+          <input type="number">
+      </label>
+      <p></p>
+      <button>Perímetro</button>
+      <button>Área</button>
     </section>
 
+    <!-- Triángulo -->
+    <section class="contenedor triangulo">
+        <h2>Triangulo</h2>
+        <img src="" alt="">
+        <label for="">Digite la medida del lado:
+            <input type="number">
+        </label>
+        <p></p>
+        <button>Perímetro</button>
+        <p></p>
+        <button>Área</button>
+    </section>
+
+    <!-- Círculo -->
+    <section class="contenedor circulo">
+        <h2>Cuadrado</h2>
+        <img src="" alt="">
+        <label for="">Digite la medida del lado:
+            <input type="number">
+        </label>
+        <p></p>
+        <button>Perímetro</button>
+        <button>Área</button>
+    </section>
+    </main>
     <script src="./figuras.js"></script>
 </body>
 </html>
